<resources>
    <string name="app_name">My Favourite Cuisine</string>
    <string name="title_home">All Dishes</string>
    <string name="title_dashboard">Favourite</string>
    <string name="title_notifications">Random Dish</string>
    <string name="splash_screen_title">My Fav Dish</string>
    <string name="title_activity_splash">Favourite Cuisine</string>
    <string name="add_dish">Add Dish</string>
    <string name="filter_dish">Filter Dish</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_category">category\n</string>
    <string name="lbl_ingredients">ingridents\n</string>
    <string name="lbl_cooking_time_in_minutes">cooking time in mins</string>
    <string name="lbl_direction_to_cook">direction to cook</string>
    <string name="lbl_add_dish">add dish</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery\n</string>
    <string name="title_select_image">Select Image</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="item_value">Item Value</string>
    <string name="type">type</string>
    <string name="no_dishes_added_yet">No dishes added yet</string>
    <string name="dish_image">Dish Image</string>
    <string name="dish_title">Dish Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_contentDescription">heart</string>
    <string name="lbl_estimate_cooking_time">The approx time required to cook the dish is %1$s minutes</string>
    <string name="more_option_button">more option button</string>
    <string name="edit_dish">Edit Dish</string>
    <string name="lbl_update_dish">update dish</string>
    <string name="delete_dish">delete dish</string>
    <string name="select_item_to_filter">Select Item To Filter</string>
    <string name="already_added_to_fav">Dish %1$s is already added to favourite</string>
    <string name="no_data_found">No data found</string>
    
    <string name="notification_title">Check out new dish recipes</string>
    <string name="notification_subtitle">Tap for more details</string>
</resources>
