<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_5sdp"
    app:cardUseCompatPadding="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_dish_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_margin="@dimen/_1sdp"
                android:scaleType="fitXY"
                android:contentDescription="@string/dish_image"
                android:src="@drawable/ic_launcher_foreground"
                />
            <ImageButton
                android:id="@+id/ib_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|top"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_more"
                android:background="@android:color/white"
                android:contentDescription="@string/more_option_button"
                >
            </ImageButton>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_dish_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:textColor="@color/grey_900"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:text="@string/dish_title"
            >

        </TextView>
    </LinearLayout>
</androidx.cardview.widget.CardView>
